# VERSE

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
method_tvr/: bimamba.py  config.py  contrastive.py  debiased_video_frame_loss.py  inference.py  late_interaction.py  model.py  model_components.py  proposal.py  query_decoder.py  start_end_dataset.py  tfvtg_scoring.py  train.py
method_tvr/scripts/: build_desc_bert_h5.py  build_semantic_cache.sh  build_video2dur_idx.py  download_fig_annotations.sh  inference.sh  repair_semantic_final_cache.py  run_baseline_bimamba.sh  run_exp1_gar.sh  run_exp2_tfvtg.sh  run_exp_semantic_hn.sh  run_exp_semantic_hn_hp.sh  run_exp_semantic_hn_hp_pref.sh  run_multi_datasets.sh  smoke_synthetic.py  train.sh  vcmr_audit_review.py
method_tvr/semantic_perturb/: __init__.py  builder.py  cache_builder.py  cache_io.py  cli.py  dataset_semantic.py  generator.py  hashing.py  llm_backend.py  losses.py  perturb_charades_offline.json  prompts.py  report.py  rewrite_sampler.py  schema.py  stats.py  verifier.py
method_tvr/semantic_perturb/tests/: test_rewrite_sampler.py  test_schema_validation.py  test_semantic_strict.py
method_tvr/span_heads/: __init__.py  biaffine_span_head.py
standalone_eval/: eval.py
utils/: model_utils.py
